--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -1,6 +1,9 @@
+<form action = '/add_bookmark' method = post >
+    <input type="submit" value="Add new bookmark">
+</form> 
 
   <% @bookmarks.each do |bookmark| %>
-    <li><%= bookmark %></li>
+    <li><%= bookmark %></li> 
   <% end %>
 
 
