--- a/views/add_bookmark.erb
+++ b/views/add_bookmark.erb
@@ -1,6 +1,7 @@
 <form action = '/bookmarks' method = post >
     <label  for="bookmark"> Enter your bookmark:</label><br>
     <input type="text" name="add_new_bookmark" placeholder="http://......" >
+    <input type="text" name="add_new_title" placeholder="Title....." >
     <input type="submit" value="Submit">
 </form> 
 
