--- a/views/bookmarks.erb
+++ b/views/bookmarks.erb
@@ -3,7 +3,7 @@
 </form> 
 
   <% @bookmarks.each do |bookmark| %>
-    <li><%= bookmark %></li> 
+    <li><a href=<%= bookmark[:url] %>><%= bookmark[:title] %></a></li>
   <% end %>
 
 
